force-app/main/default/objects/AccountContract__c/AccountContract__c.object-meta.xml
<CustomObject>
    <label>Account Contract</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Contracts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>