force-app/main/default/objects/AccountContract__c/fields/accountName__c.field-meta.xml
<CustomField>
    <fullName>accountName__c</fullName>
    <formula>account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>