force-app/main/default/objects/AccountContract__c/fields/isAccountOwner__c.field-meta.xml
<CustomField>
    <fullName>isAccountOwner__c</fullName>
    <formula>IF( OwnerId  =  account__r.Owner.Id  , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Account Owner</label>
    <type>Checkbox</type>
</CustomField>