force-app/main/default/objects/AccountContract__c/fields/isEvergreen__c.field-meta.xml
<CustomField>
    <fullName>isEvergreen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Evergreen</label>
    <type>Checkbox</type>
</CustomField>