force-app/main/default/objects/AccountContract__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>Status</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>