force-app/main/default/objects/AccountContract__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-disclosure Agreement (NDA)</fullName>
            </value>
            <value>
                <fullName>Technical License Agreement (TLA)</fullName>
            </value>
            <value>
                <fullName>Memorandum of Understanding (MOU)</fullName>
            </value>
            <value>
                <fullName>Commercial Framework Agreement (CFA)</fullName>
            </value>
            <value>
                <fullName>Capacity Access Agreement (CAA)</fullName>
            </value>
            <value>
                <fullName>Limited Trademark License Agreement (LTLA)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>