force-app/main/default/objects/AccountContract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>account__c</columns>
    <columns>expirationDate__c</columns>
    <columns>type__c</columns>
    <columns>status__c</columns>
    <columns>isEvergreen__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>